--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 collectionsImmutableVersion=0.3.3
 reactorKotlinVersion=1.1.0-RC1
-r2dbcVersion=0.8.6.RELEASE
+r2dbcPostgresqlVersion=0.8.6.RELEASE
+r2dbcClientVersion=0.8.0.RC1
