--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ reactorKotlinVersion=1.1.0-RC1
 kotlinxCoroutinesVersion=1.4.0-M1
 r2dbcPostgresqlVersion=0.8.6.RELEASE
 r2dbcClientVersion=0.8.0.RC1
+jdbiVersion=3.16.0
+postgresqlJdbcVersion=42.2.18
