--- a/adapters/web/spring/src/main/resources/application.yml
+++ b/adapters/web/spring/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 server:
   port: 8081
-  
+spring:
+  datasource:
+    platform: postgres
+    url: jdbc:postgresql://localhost:5432/inventory
+    username: inventory
+    password: inventory
+    driver-class-name: org.postgresql.Driver
