--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,10 @@ r2dbcPostgresqlVersion=0.8.6.RELEASE
 r2dbcClientVersion=0.8.0.RC1
 jdbiVersion=3.16.0
 postgresqlJdbcVersion=42.2.18
+
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.caching.debug=false
+org.gradle.configureondemand=false
+org.gradle.daemon.idletimeout=10800000
+org.gradle.console=auto
