--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ r2dbcPostgresqlVersion=0.8.6.RELEASE
 r2dbcClientVersion=0.8.0.RC1
 jdbiVersion=3.16.0
 postgresqlJdbcVersion=42.2.18
+spotlessVersion=5.8.2
 
 org.gradle.caching=true
 org.gradle.parallel=true
