change tracking aggregate

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 collectionsImmutableVersion=0.3.3
+vavrKotlinVersion=0.10.2
 reactorKotlinVersion=1.1.0-RC1
 kotlinxCoroutinesVersion=1.4.0-M1
 r2dbcPostgresqlVersion=0.8.6.RELEASE
