--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@ r2dbcClientVersion=0.8.0.RC1
 jdbiVersion=3.16.0
 postgresqlJdbcVersion=42.2.18
 spotlessVersion=5.8.2
+archUnitVersion=0.17.0
+junitPlatformVersion=5.7.1
 
 org.gradle.caching=true
 org.gradle.parallel=true
